# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("native_viewport") {
  output_name = "framebuffer"

  sources = [
    "main.cc",
    "framebuffer_impl.cc",
    "framebuffer_impl.h",
  ]

  deps = [
    "//lib/ftl",
    "//mojo/public/c/system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/services/framebuffer/interfaces",
    "//mojo/system",
  ]

  libs = [ "mxio" ]
}
